2016/09/01:
New command line switch --only-preprocess-for-ocamlyacc, supposed to print the
grammar in a form that ocamlyacc can accept. As of now, this feature is
incomplete (in particular, support for Menhir's position keywords is missing),
untested, and undocumented. It could be removed in the future.

2016/08/26:
Fixes in the output of --only-preprocess:
  The order of productions is now preserved.
    (It was not. This matters if there are reduce/reduce conflicts.)
  %parameter directives are now printed. (They were not).
  %on_error_reduce directives are now printed. (They were not.)

2016/08/25:
Makefile fix, undoing a change made on 2016/03/03, which caused installation
to fail under (some versions of?) Windows where dynamic linking is not
supported. (Reported by Andrew Appel.)

2016/08/05:
%on_error_reduce declarations now have implicit priority levels, so as to
tell Menhir what to do when two such declarations are applicable.
Also, the well-formedness checks on %type and %on_error_reduce declarations
have been reinforced.

2016/06/23:
A small change in the generated code (both in the code and table back-ends) so
as to avoid OCaml's warning 41. The warning would arise (when compiling a
generated parser with OCaml 4.03) because Menhir's exception [Error] has the
same name as the data constructor [Error] in OCaml's pervasive library.
(Reported by Bernhard Schommer.)

2016/05/18:
Anonymous rules now work also when used inside a parameterized rule.
(This did not work until now.) When an anonymous rule is hoisted out
of a parameterized rule, it may itself become parameterized. Menhir
parameterizes it only over the parameters that it actually needs.

2016/05/04:
In the Coq backend, split the largest definitions into smaller
ones. This circumvents a limitation of vm_compute on 32 bit
machines. This also enables us to perform sharing between
definitions, so that the generated files are much smaller.

2016/04/10: